--- a/addons/website_hr_recruitment/views/snippets.xml
+++ b/addons/website_hr_recruitment/views/snippets.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+
+<template id="jobs_searchbar_input_snippet_options" inherit_id="website.searchbar_input_snippet_options" name="jobs search bar snippet options">
+    <xpath expr="//div[@data-js='SearchBar']/we-select[@data-name='scope_opt']" position="inside">
+        <we-button data-set-search-type="jobs" data-select-data-attribute="jobs" data-name="search_jobs_opt" data-form-action="/jobs">Jobs</we-button>
+    </xpath>
+    <xpath expr="//div[@data-js='SearchBar']/div[@data-dependencies='limit_opt']" position="inside">
+        <we-checkbox string="Description" data-dependencies="search_jobs_opt" data-select-data-attribute="true" data-attribute-name="displayDescription"
+            data-apply-to=".search-query"/>
+    </xpath>
+</template>
+
 <template id="snippet_options" inherit_id="website.snippet_options" name="Hr Recruitment Snippet Options">
     <xpath expr="." position="inside">
         <div data-selector="main:has(.o_website_hr_recruitment_jobs_list)" data-page-options="true" data-no-check="true" string="Jobs Page">
@@ -14,6 +25,10 @@
                          data-reload="/"/>
             <we-checkbox string="Offices Filter"
                          data-customize-website-views="website_hr_recruitment.job_filter_by_offices"
+                         data-no-preview="true"
+                         data-reload="/"/>
+            <we-checkbox string="Search Bar"
+                         data-customize-website-views="website_hr_recruitment.job_search_bar"
                          data-no-preview="true"
                          data-reload="/"/>
             <we-checkbox string="Sidebar"
