[IMP] account: cash discount improvements
Purpose :
Improve multiple use cases while handling the Accounting part of Cash Discounts in Odoo.

When creating a Payment Term, the user can now specifically design an early payment discount through an additional part in the wizard.
This will, amongst other things, allow the user to choose in which way the tax should be computed on the discounted invoice (tax included or excluded).

The discounted amount and the conditions to fulfill are printed below the invoice PDF.

Registering a payment while filling the condition for an early payment discount will prefill the fields accordingly.

Reconciliation --> In the reconciliation widget, the logic of Early Payments Discounts are also applied.

Related : odoo/enterprise#28607

--- a/addons/account/views/account_payment_term_views.xml
+++ b/addons/account/views/account_payment_term_views.xml
@@ -102,6 +102,40 @@
                             The last line's computation type should be "Balance" to ensure that the whole amount will be allocated.
                         </p>
                         <field name="line_ids"/>
+
+                        <!-- ============================== Early payment section ============================== -->
+                        <field name="early_payment_applicable" invisible="1"/>
+                        <div attrs="{'invisible':[('early_payment_applicable','=',False)]}">
+                            <field name="has_early_payment"/>
+                            <label for="has_early_payment"/>
+                            <div attrs="{'invisible':[('has_early_payment','=',False)]}">
+                                <group>
+                                    <group>
+                                        <div class="o_row">
+                                            <label for="percentage_to_discount"/>
+                                            <field name="percentage_to_discount"/>
+                                            <span class="o_form_label oe_inline">%</span>
+                                        </div>
+                                    </group>
+                                </group>
+                                <group>
+                                    <group>
+                                        <div class="o_row">
+                                            <label for="discount_computation"/>
+                                            <field name="discount_computation"/>
+                                        </div>
+                                    </group>
+                                </group>
+                                <group>
+                                    <div colspan="2">
+                                        <label for="discount_time_availability"/>
+                                        <field name="discount_days" class="oe_inline"/>
+                                        <label for="discount_time_availability" string=""/>
+                                        <field name="discount_time_availability" class="oe_inline"/>
+                                    </div>
+                                </group>
+                            </div>
+                        </div>
                     </sheet>
                 </form>
             </field>
