--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -197,6 +197,56 @@
                             </div>
                         </div>
                     </div>
+                    <div t-if="o.invoice_payment_term_id">
+                        <p t-if="o.invoice_payment_term_id.has_early_payment">
+                            <strong>
+                                Early Payment (before <span t-esc="o.invoice_payment_term_id._get_last_date_for_discount(o.invoice_date)"/>):
+                                <span t-esc="o.currency_id.symbol"/>
+                                <span t-esc="o.invoice_early_pay_amount_after_discount"/>
+                                (<span t-esc="o.invoice_payment_term_id.percentage_to_discount"/> % discount)
+                            </strong>
+                        </p>
+                    </div>
+                    <div t-if="o.invoice_payment_term_id.has_early_payment" class="clearfix mb-4">
+                        <div id="total-early" class="row">
+                            <div t-attf-class="#{'col-6' if report_type != 'html' else 'col-sm-7 col-md-6'}">
+                                <table class="table table-sm" style="page-break-inside: avoid;">
+                                    <t>
+                                        <tr class="border-black">
+                                            <td><b><strong>Untaxed amount</strong></b></td>
+                                            <td class="text-end">
+                                                <span t-esc="o.currency_id.symbol"/>
+                                                <span
+                                                    t-att-class="oe_subtotal_footer_separator"
+                                                    t-esc="'%.2f'% o.invoice_early_pay_untaxed_amount_after_discount"
+                                                />
+                                            </td>
+                                        </tr>
+                                        <t>
+                                            <tr>
+                                                <td><strong>Total tax amount</strong></td>
+                                                <td class="text-end">
+                                                    <span t-esc="o.currency_id.symbol"/>
+                                                    <span
+                                                            t-att-class="oe_subtotal_footer_separator"
+                                                            t-esc="'%.2f'% o.invoice_early_pay_tax_after_discount"
+                                                    />
+                                                </td>
+                                            </tr>
+                                        </t>
+                                        </t>
+                                            <tr class="border-black o_total">
+                                                <td><b><strong>Total</strong></b></td>
+                                                <td class="text-end">
+                                                    <span t-esc="o.currency_id.symbol"/>
+                                                    <span t-esc="'%.2f'% o.invoice_early_pay_amount_after_discount"/>
+                                                </td>
+                                            </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
                     <p t-if="o.move_type in ('out_invoice', 'in_refund') and o.payment_reference" name="payment_communication">
                         Please use the following communication for your payment : <b><span t-field="o.payment_reference"/></b>
                     </p>
