--- a/addons/account/wizard/account_payment_register_views.xml
+++ b/addons/account/wizard/account_payment_register_views.xml
@@ -26,6 +26,8 @@
                     <field name="available_payment_method_line_ids" invisible="1"/>
                     <field name="available_partner_bank_ids" invisible="1"/>
                     <field name="company_currency_id" invisible="1"/>
+                    <field name="has_epd_and_is_in_time" invisible="1"/>
+                    <field name="show_epd_button" invisible="1"/>
 
                     <group>
                         <group name="group1">
@@ -48,25 +50,28 @@
                                        required="1"
                                        options="{'no_create': True, 'no_open': True}"
                                        groups="base.group_multi_currency"/>
+                                        <button attrs="{'invisible': [('show_epd_button', '=', False)]}" name="fill_in_with_epd" string="Discount" type="object" class="btn btn-secondary float-end"/>
                             </div>
                             <field name="payment_date"/>
                             <field name="communication"
                                    attrs="{'invisible': ['|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}"/>
                         </group>
                         <group name="group3"
-                               attrs="{'invisible': ['|', ('payment_difference', '=', 0.0), '|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}">
+                               attrs="{'invisible': ['|', ('payment_difference', '=', 0.0), '|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}"
+                               groups="account.group_account_readonly">
                             <label for="payment_difference"/>
                             <div>
                                 <field name="payment_difference"/>
-                                <field name="payment_difference_handling" widget="radio" nolabel="1"/>
+                                <field name="payment_difference_handling" widget="radio" nolabel="1" />
                                 <div attrs="{'invisible': [('payment_difference_handling','=','open')]}">
                                     <label for="writeoff_account_id" string="Post Difference In" class="oe_edit_only"/>
                                     <field name="writeoff_account_id"
                                            string="Post Difference In"
                                            options="{'no_create': True}"
-                                           attrs="{'required': [('payment_difference_handling', '=', 'reconcile')]}"/>
+                                           attrs="{'required': [('payment_difference_handling', '=', 'reconcile')]}"
+                                           />
                                     <label for="writeoff_label" class="oe_edit_only" string="Label"/>
-                                    <field name="writeoff_label" attrs="{'required': [('payment_difference_handling', '=', 'reconcile')]}"/>
+                                    <field name="writeoff_label" attrs="{'required': [('payment_difference_handling', '=', 'reconcile')]}" />
                                 </div>
                             </div>
                         </group>
