fixup! [base] account,analytic: basic model and view changes required for the new analytic widget (everything works using the default many2many_tags widget on a o2m field to distribution_tags)

--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -882,14 +882,14 @@
                                                widget="many2many_tags"/>
                                         <field name="quantity" optional="show"/>
                                         <!-- These fields should have groups applied -->
-                                        <field name="analytic_account_selector_id"/>
+                                        <field name="analytic_account_selector_id" invisible="1"/>
                                         <field name="analytic_dist_model_selector_id" invisible="1"/>
                                         <!-- <field name="analytic_dist_tag_ids"
                                                widget="many2many_tags"/> -->
                                         <field name="analytic_dist_tag_ids"
                                                widget="analytic_o2m"
                                                string="Analytic Distribution"
-                                               options="{'search_fields': ['analytic_account_selector_id', 'analytic_dist_model_selector_id']}"/>
+                                               options="{'template_field': 'analytic_dist_model_selector_id', 'search_field': 'analytic_account_selector_id'}"/>
                                         <!-- <field name="analytic_json" widget="analytic_json"/> -->
                                         <field name="quantity"/>
                                         <field name="product_uom_category_id" invisible="1"/>
@@ -1091,6 +1091,8 @@
                                                groups="analytic.group_analytic_tags"
                                                widget="many2many_tags"
                                                attrs="{'invisible': [('display_type', 'in', ('line_section', 'line_note'))]}"/>
+                                        <!-- These fields are added here to ensure saving - visible? -->
+                                        <field name="analytic_dist_model_selector_id" invisible="1"/>
                                         <field name="analytic_dist_tag_ids"/>
                                         <field name="date_maturity"
                                                optional="hide"
